--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -21,4 +21,5 @@
 </p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Back', projects_path %> |
+<%= link_to 'Collaborators', project_collaborators_path(@project) %>
