--- a/app/views/project_collaborators/_form.html.erb
+++ b/app/views/project_collaborators/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag({controller: "collaborators", action: "create", method: "post"}, {class: "form-inline"}) do  %>
+<%= form_tag({controller: "project_collaborators", action: "create", method: "post"}, {class: "form-inline"}) do  %>
   <div class="form-group">
     <%= label_tag(:email, "Email") %>
     <%= text_field_tag(:email, "", class: "form-control") %>
