--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -17,4 +17,5 @@
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %> |
-<%= link_to 'Collaborators', project_collaborators_path(@project) %>
+<%= link_to 'Collaborators', project_collaborators_path(@project) %> |
+<%= link_to 'Teams', project_teams_path(@project) %>
