--- a/app/views/projects/teams/_form.html.erb
+++ b/app/views/projects/teams/_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_tag({controller: "project_collaborators", action: "create", method: "post"}, {class: "form-inline"}) do  %>
+<%= form_tag(project_teams_path, method: "post", class: "form-inline") do  %>
   <div class="form-group">
-    <%= label_tag(:email, "Email") %>
-    <%= text_field_tag(:email, "", class: "form-control") %>
+    <%= label_tag(:name, "Team Name") %>
+    <%= text_field_tag(:name, "", class: "form-control") %>
   </div>
 
   <div class="form-group">
