--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,39 @@
-<h2>Change your password</h2>
+<div class="row">
+  <div class="col-md-4 col-md-offset-4">
+    <div class="login-panel panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Change your password</h3>
+      </div>
+      <div class="panel-body">
+        <%= render "devise/shared/error_messages" %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+          <fieldset>
+            <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+            <div class="form-group">
+              <% if @minimum_password_length %>
+                <% placeholder = "New password (#{@minimum_password_length} characters minimum)" %>
+              <% else %>
+                <% placeholder = "New password" %>
+              <% end %>
+
+              <%= f.password_field :password, autofocus: true, autocomplete: "off", placeholder: placeholder, class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Confirm new password", class: "form-control" %>
+            </div>
+
+            <%= f.submit "Change my password", class: "btn btn-lg btn-success btn-block" %>
+
+          </fieldset>
+        <% end %>
+
+      </div>
+    </div>
+    <%= render "devise/shared/links" %>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
