--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,65 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="row">
+  <div class="col-lg-12">
+    <h1 class="page-header">Edit Account</h1>
   </div>
+  <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">Personal Data</div>
+      <div class="panel-body">
+        <%= render "devise/shared/error_messages" %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <fieldset>
+            <div class="form-group">
+              <%= f.label :email %>
+              <%= f.email_field :email, autofocus: true, placeholder: "E-mail", class: "form-control" %>
+            </div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+            <div class="form-group">
+              <% if @minimum_password_length %>
+                <% placeholder = "New Password (#{@minimum_password_length} characters minimum)" %>
+              <% else %>
+                <% placeholder = "New Password" %>
+              <% end %>
+
+              <%= f.label :password %>
+              <%= f.password_field :password, autocomplete: "off", placeholder: placeholder, class: "form-control" %>
+              <p class="help-block">Leave blank if you don't want to change it</p>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :password_confirmation %>
+              <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "New Password Confirmation", class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :current_password %>
+              <%= f.password_field :current_password, autocomplete: "off", placeholder: "Current Password Confirmation", class: "form-control" %>
+            </div>
+
+            <%= f.submit "Update", class: "btn btn-success" %>
+          </fieldset>
+        <% end %>
+      </div>
+    </div>
   </div>
+  <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">Irreversible</div>
+      <div class="panel-body">
+        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
+      </div>
+    </div>
+  <!-- /.col-lg-12 -->
   </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
+<!-- /.row -->
