--- a/app/views/projects/_file_list.html.erb
+++ b/app/views/projects/_file_list.html.erb
@@ -1,19 +1,24 @@
-<table>
-  <thead>
-    <tr>
-      <th>FileName</th>
-      <th>Last Modification</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% files.each do |file| %>
+<% if files.size > 0 %>
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= link_to file[:name], project_file_path(project_id, file[:name]) %></td>
-        <td></td>
-        <td><%= link_to 'Destroy', project_file_path(project_id, file[:name]), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Filename</th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% files.each do |file| %>
+        <tr>
+          <td><%= link_to file[:name], project_file_path(project_id, file[:name]) %></td>
+          <% if ::Projects::Files::Policy.allowed_actions(current_user.id, project_id).include?(:destroy) %>
+            <td><%= link_to 'Destroy', project_file_path(project_id, file[:name]), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% else %>
+            <td></td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <p>No files here. Add one!</p>
+<% end %>
