--- a/app/views/projects/collaborators/index.html.erb
+++ b/app/views/projects/collaborators/index.html.erb
@@ -1,22 +1,49 @@
-<p id="notice"><%= notice %></p>
+<%= render '/projects/project_header' %>
 
-<h1>Project Collaborators</h1>
+<%= render :layout => '/projects/project_panel', :locals => {:menu => { collaborators: true } } do %>
 
-<% if @user_role&.errors&.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@user_role.errors.count, "error") %> prohibited this operation from being concluded:</h2>
-    <ul>
-    <% @user_role.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
+  <% if @user_role&.errors&.any? %>
+    <div class="alert alert-warning alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+      <ul>
+        <% @user_role.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      Project Collaborators
+    </div>
+    <div class="panel-body">
+      <% if @collaborators.size > 0 %>
+        <div class="hub-table">
+          <div class="hub-row">
+            <span class="hub-cell"><strong>Collaborator e-mail</strong></span>
+            <span class="hub-cell"><strong>Role</strong></span>
+            <span class="hub-cell"></span>
+            <span class="hub-cell"></span>
+          </div>
+          <% @collaborators.each do |collaborator| %>
+            <%= render "update_form", project_id: @project_id, user: collaborator[:user], user_role: collaborator[:role] %>
+          <% end %>
+        </div>
+      <% else %>
+        <p>No collaborators in this project. Add a new one!</p>
+      <% end %>
+    </div>
   </div>
+
+  <% if ::Projects::Collaborators::Policy.allowed_actions(current_user.id, @project_id, nil).include?(:create) %>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Add new one
+      </div>
+      <div class="panel-body">
+        <%= render "form", user_role: @user_role %>
+      </div>
+    </div>
+  <% end %>
 <% end %>
-
-<% @collaborators.each do |collaborator| %>
-  <%= render "update_form", project_id: @project_id, user: collaborator[:user], user_role: collaborator[:role] %>
-<% end %>
-
-<%= render "form", user_role: @user_role %>
-
-<%= link_to 'Back', project_path(@project_id) %>
