--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,21 @@
-<h1>Editing Project</h1>
+<%= render 'project_header' %>
 
-<%= render 'form', project: @project %>
+<%= render :layout => '/projects/project_panel', :locals => {:menu => { edit_project: true } } do %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+  <%= render 'edit_form', project: @project %>
+
+  <br>
+
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">Irreversible</div>
+        <div class="panel-body">
+          <p>All your work will be lost!</p>
+          <p><%= button_to "Destroy this project", @project, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<% end %>
