--- a/app/views/projects/files/new.html.erb
+++ b/app/views/projects/files/new.html.erb
@@ -1,16 +1,14 @@
-<h1>New File</h1>
+<%= render '/projects/project_header' %>
 
-<% flash.each do |key, msg| %>
-  <%= content_tag :div, msg, :class => [key, " message"], :id => "notice_#{key}" %>
+<%= render :layout => '/projects/project_panel', :locals => {:menu => { add_file: true } } do %>
+
+  <%= form_tag(project_files_path, method: "post", multipart: true) do  %>
+    <div class="form-group">
+      <%= label_tag(:file, "File to Upload:") %>
+      <%= file_field_tag :file %>
+    </div>
+
+    <%= submit_tag("Upload", class: "btn btn-success") %>
+  <% end %>
+
 <% end %>
-
-<%= form_tag(project_files_path, method: "post", multipart: true) do  %>
-  <div class="form-group">
-    <%= label_tag(:file, "Upload File:") %>
-    <%= file_field_tag :file %>
-  </div>
-
-  <%= submit_tag("Submit", class: "btn btn-default") %>
-<% end %>
-
-<%= link_to 'Back', project_path(@project_id) %>
