--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,32 +1,64 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-lg-12">
+    <h1 class="page-header">Projects</h1>
+  </div>
+  <!-- /.col-lg-12 -->
+</div>
 
-<h1>Projects</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <% if notice.present? %>
+          <div class="alert"><%= notice %></div>
+        <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Private</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <% if @projects.size > 0 %>
+          <ul class="chat">
 
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= project.description %></td>
-        <td><%= project.private %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+            <% @projects.each do |project| %>
 
-<br>
+              <li class="left clearfix">
+                  <span class="chat-img pull-left">
+                      <img src="http://placehold.it/50/55C1E7/fff" alt="Project Image" class="img-circle">
+                  </span>
+                  <div class="chat-body clearfix">
+                      <div class="header">
+                          <%= link_to project do %>
+                            <strong class="primary-font"><%= project.name %></strong>
+                          <% end %>
+                          <small class="pull-right text-muted">
+                            <% if ::Projects::Policy.allowed_actions(current_user.id, project.id).include?(:edit) %>
+                              <%= link_to 'Edit', edit_project_path(project) %> |
+                            <% end %>
 
-<%= link_to 'New Project', new_project_path %>
+                            <% if ::Projects::Policy.allowed_actions(current_user.id, project.id).include?(:destroy) %>
+                              <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %> |
+                            <% end %>
+                            <i class="fa fa-clock-o fa-fw"></i>
+                            <%= distance_of_time_in_words(Time.now, project.updated_at) %>
+                          </small>
+
+                      </div>
+                      <p><%= project.description %></p>
+                  </div>
+              </li>
+
+            <% end %>
+
+          </ul>
+        <% else %>
+          <p>No projects here. Create one!</p>
+        <% end %>
+
+        <br>
+
+        <%= link_to new_project_path do %>
+          <button type="button" class="btn btn-success">New Project</button>
+        <% end %>
+      </div>
+    </div>
+  <!-- /.col-lg-12 -->
+  </div>
+</div>
+<!-- /.row -->
