--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New Project</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <h1 class="page-header">New Project</h1>
+  </div>
+  <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
 
-<%= render 'form', project: @project %>
-
-<%= link_to 'Back', projects_path %>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <%= render 'form', project: @project %>
+      </div>
+    </div>
+  </div>
+</div>
