--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,25 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%= render 'project_header' %>
 
-<p>
-  <strong>Name:</strong>
-  <%= @project.name %>
-</p>
+<%= render :layout => '/projects/project_panel', :locals => {:menu => { files: true } } do %>
 
-<p>
-  <strong>Description:</strong>
-  <%= @project.description %>
-</p>
+  <%= render 'file_list', project_id: @project.id, files: @files %>
 
-<p>
-  <strong>Private:</strong>
-  <%= @project.private %>
-</p>
+  <% if ::Projects::Files::Policy.allowed_actions(current_user.id, @project.id).include?(:create) %>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Add a new file
+      </div>
+      <div class="panel-body">
+        <%= form_tag(project_files_path(@project), method: "post", multipart: true) do  %>
+          <div class="form-group">
+            <%= label_tag(:file, "File to Upload:") %>
+            <%= file_field_tag :file %>
+          </div>
 
-<%= render 'file_list', project_id: @project.id, files: @files %>
+          <%= submit_tag("Upload", class: "btn btn-success") %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %> |
-<%= link_to 'Collaborators', project_collaborators_path(@project) %> |
-<%= link_to 'Teams', project_teams_path(@project) %> |
-<%= link_to 'Suggestions', project_suggestions_path(@project) %> |
-<%= link_to 'Add File', new_project_file_path(@project) %>
+<% end %>
