--- a/app/views/projects/teams/_form.html.erb
+++ b/app/views/projects/teams/_form.html.erb
@@ -9,5 +9,5 @@
     <%= select_tag(:role, options_for_select([["Reader", "reader"], ["Writer", "writer"], ["Owner", "owner"]]), { :class => "form-control" }) %>
   </div>
 
-  <%= submit_tag("Create", class: "btn btn-default") %>
+  <%= submit_tag("Create", class: "btn btn-inline btn-success") %>
 <% end %>
