--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,6 +1,19 @@
-<h1>Editing Team</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <h1 class="page-header">Editing Team</h1>
+  </div>
+  <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
 
-<%= render 'form', team: @team %>
-
-<%= link_to 'Show', @team %> |
-<%= link_to 'Back', teams_path %>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <%= render 'form', team: @team %>
+        <br>
+        <%= link_to 'Show Team', @team %>
+      </div>
+    </div>
+  </div>
+</div>
