--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,27 +1,50 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-lg-12">
+    <h1 class="page-header">My Teams</h1>
+  </div>
+  <!-- /.col-lg-12 -->
+</div>
 
-<h1>Teams</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <% if notice.present? %>
+          <div class="alert"><%= notice %></div>
+        <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <% if @teams.size > 0 %>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Team Name</th>
+                <th colspan="2"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @teams.each do |team| %>
+                <tr>
+                  <td><%= link_to team.name, team %></td>
+                  <td>
+                    <%= link_to 'Edit', edit_team_path(team) %> |
+                    <%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        <% else %>
+          <p>No teams here. Create one!</p>
+        <% end %>
 
-  <tbody>
-    <% @teams.each do |team| %>
-      <tr>
-        <td><%= team.name %></td>
-        <td><%= link_to 'Show', team %></td>
-        <td><%= link_to 'Edit', edit_team_path(team) %></td>
-        <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <br>
 
-<br>
-
-<%= link_to 'New Team', new_team_path %>
+        <%= link_to new_team_path do %>
+          <button type="button" class="btn btn-success">New Team</button>
+        <% end %>
+      </div>
+    </div>
+  <!-- /.col-lg-12 -->
+  </div>
+</div>
+<!-- /.row -->
