Suggestion diff's and code prettify

--- a/app/views/layouts/_content.html.erb
+++ b/app/views/layouts/_content.html.erb
@@ -1,6 +1,6 @@
 <!-- Page Content -->
 <div class="full-height" id="page-wrapper">
-  <div class="container-fluid">
+  <div class="full-height container-fluid">
     <%= yield %>
   </div>
   <!-- /.container-fluid -->
