--- a/app/views/projects/suggestions/show.html.erb
+++ b/app/views/projects/suggestions/show.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="panel-body">
         <h3>Modifications</h3>
-        <pre><%= @diff.force_encoding("UTF-8") %></pre>
+        <div class="suggestion-diff"><%= @diff.force_encoding("UTF-8") %></div>
       </div>
     </div>
   </div>
