--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,10 +1,14 @@
-html, body, .full-height {
-    height: 100%;
+html, .full-height {
+  height: 100%;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+pre {
+  background: none;
 }
 
 .form-inline > * {
