--- a/app/views/projects/files/show.html.erb
+++ b/app/views/projects/files/show.html.erb
@@ -7,7 +7,7 @@
       <%= @file[:name] %>
     </div>
     <div class="panel-body">
-      <pre><%= @file[:content] %></pre>
+      <pre class="prettyprint"><%= @file[:content] %></pre>
     </div>
   </div>
 
