fix null pointers

--- a/app/views/projects/_file_list.html.erb
+++ b/app/views/projects/_file_list.html.erb
@@ -10,7 +10,7 @@
       <% files.each do |file| %>
         <tr>
           <td><%= link_to file[:name], project_file_path(project_id, file[:name]) %></td>
-          <% if ::Projects::Files::Policy.allowed_actions(current_user.id, project_id).include?(:destroy) %>
+          <% if ::Projects::Files::Policy.allowed_actions(current_user&.id, project_id).include?(:destroy) %>
             <td><%= link_to 'Destroy', project_file_path(project_id, file[:name]), method: :delete, data: { confirm: 'Are you sure?' } %></td>
           <% else %>
             <td></td>
