--- a/app/views/projects/collaborators/index.html.erb
+++ b/app/views/projects/collaborators/index.html.erb
@@ -36,7 +36,7 @@
     </div>
   </div>
 
-  <% if ::Projects::Collaborators::Policy.allowed_actions(current_user.id, @project_id, nil).include?(:create) %>
+  <% if ::Projects::Collaborators::Policy.allowed_actions(current_user&.id, @project_id, nil).include?(:create) %>
     <div class="panel panel-default">
       <div class="panel-heading">
         Add new one
