--- a/app/views/projects/suggestions/index.html.erb
+++ b/app/views/projects/suggestions/index.html.erb
@@ -15,15 +15,15 @@
           <tr>
             <td><%= link_to suggestion.title, project_suggestion_path(@project_id, suggestion) %></td>
             <td>
-              <% if ::Projects::Suggestions::Policy.allowed_actions(current_user.id, @project_id, suggestion.id).include?(:edit) %>
+              <% if ::Projects::Suggestions::Policy.allowed_actions(current_user&.id, @project_id, suggestion.id).include?(:edit) %>
                 <%= link_to "Edit", edit_project_suggestion_path(@project_id, suggestion) %> |
               <% end %>
 
-              <% if ::Projects::Suggestions::Policy.allowed_actions(current_user.id, @project_id, suggestion.id).include?(:destroy) %>
+              <% if ::Projects::Suggestions::Policy.allowed_actions(current_user&.id, @project_id, suggestion.id).include?(:destroy) %>
                 <%= link_to "Destroy", project_suggestion_path(@project_id, suggestion), method: :delete, data: { confirm: "Are you sure?" } %>
               <% end %>
 
-              <% if ::Projects::Suggestions::Policy.allowed_actions(current_user.id, @project_id, suggestion.id).include?(:accept) %>
+              <% if ::Projects::Suggestions::Policy.allowed_actions(current_user&.id, @project_id, suggestion.id).include?(:accept) %>
                 | <%= link_to "Accept", project_suggestion_accept_path(@project_id, suggestion), :method=> :post %>
               <% end %>
             </td>
