Change email on side panel

--- a/app/views/layouts/navigation/_static_side.html.erb
+++ b/app/views/layouts/navigation/_static_side.html.erb
@@ -20,7 +20,7 @@
             <div class="user-avatar">
               <%= image_tag current_user.gravatar_url, class: "img-circle" %>
             </div>
-            <strong><p><%= current_user.email %></p></strong>
+            <p><%= current_user.email %></p>
           </div>
           <!-- /input-group -->
         </li>
