--- a/app/views/projects/_file_list.html.erb
+++ b/app/views/projects/_file_list.html.erb
@@ -16,7 +16,7 @@
             <% end %>
 
             <% if ::Projects::Files::Policy.allowed_actions(current_user&.id, project_id).include?(:destroy) %>
-              | <%= link_to 'Destroy', project_file_path(project_id, file[:name]), method: :delete, data: { confirm: 'Are you sure?' } %>
+              | <%= link_to 'Destroy', project_file_delete_path(project_id, file[:name]), method: :delete, data: { confirm: 'Are you sure?' } %>
             <% else %>
           </td>
           <% end %>
